# my_fbp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/my_fbp/: data.h  fft.h
src/: data.c  fft.c
tests/: CMakeLists.txt  data_fft.csv  data_fft.txt  generate_data.py  test_fft.c
